# livrariaNova

./: .env_exenplo  .gitignore  README.md  pyproject.toml  requirements.txt
config/: settings.py  urls.py
livraria/: admin.py  models.py  serializers.py  views.py
livraria/migrations/: 0001_initial.py  0002_alter_livro_categoria_alter_livro_editora.py  0002_editora.py  0003_autor_livro.py  0004_alter_autor_options.py  0005_livro_capa.py
livraria/models/: autor.py  categoria.py  editora.py  livro.py
livraria/serializers/: __init__.py  autor.py  editora.py  livro.py
livraria/views/: __init__.py  autor.py  categoria.py  editora.py  livro.py
uploader/migrations/: 0001_initial.py
utils/: files.py
