[project]
name = "livrar"
version = "0.1.0"
description = "Projeto Int"
authors = [
    {name = "Thigas", email = "thigas@gmail.com"},
]
dependencies = [
    "django>=5.0",
    "djangorestframework>=3.14.0",
    "python-magic>=0.4.27",
    "Pillow>=10.1.0",
    "python-dotenv>=1.0.0",
    "netifaces>=0.11.0",
    "gunicorn>=21.2.0",
    "whitenoise[brotli]>=6.6.0",
    "psycopg2-binary>=2.9.9",
    "django-cloudinary-storage>=0.3.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.scripts]
pre_dev = "python ./scripts/set_my_ip.py"
dev = "python manage.py runserver 0.0.0.0:19003"

[[tool.pdm.autoexport]]
filename = "requirements.txt"
without-hashes = "true"